# Viewpoint_estimator

./: .gitignore  LICENSE  README.md  example_config.yaml  pyproject.toml  requirements.txt
applications/: cluster_labeler.py  evaluate_pipeline.py  main_pipeline.py  pipeline_inference.py
configs/: pipeline_config.yaml
evaluation/: clean_detection.ipynb  evaluate_dataset.py  evaluate_results_visualization.ipynb  interactive_analysis.ipynb
src/analysis/: __init__.py  method_registry.py  methods.py  patch_analyzer.py
src/classification/: __init__.py  viewpoint_3d.py
src/data/: coco_loader.py  cvat_loader.py  folder_loader.py
src/detection/: __init__.py  animal_detector.py
src/models/: __init__.py  dinov2_extractor.py
src/pipeline/: animal_detection_pipeline.py
src/pose/: alternating_minimization.py  batch_detection_dataset.py  detection_dataset.py
src/utils/: __init__.py  analysis_utils.py  cluster_utils.py  config.py  detection_metrics.py  detection_utils.py  mask_utils.py  morphological_utils.py  pca_utils.py
src/visualization/: __init__.py  cluster_visualization.py  component_colors.py  component_normalization.py  depth_visualization.py  detection_plots.py  detection_visualization.py  morphological_postprocessing.py  patch_overlay.py  patch_uncertainty.py
